PP-11: Fix issue with header overlapping scrollbar

--- a/components/experience/Experience.module.scss
+++ b/components/experience/Experience.module.scss
@@ -212,6 +212,7 @@
     }
   }
   &__companyLogo {
+    flex-shrink: 0;
     border-radius: 2px;
     overflow: hidden;
   }
